<resources>
    <string name="app_name">Wardrobe</string>
    <string name="user_name">Nombre</string>
    <string name="user">Usuario</string>
    <string name="birthdate">Fecha de Nacimiento</string>
    <string name="gender">Sexo</string>
    <string name="country">Pais</string>
    <string name="state">Ciudad</string>
    <string name="city">Localidad</string>
    <string name="pass">Contraseña</string>
    <string name="passConfirm">Confirmar Contraseña</string>
    <string name="email">Email</string>
    <string name="garment_name">Nombre</string>
    <string name="garment_type">Tipo</string>
    <string name="description">Descripción</string>
    <string name="color">Color</string>
    <string name="tissue">Tejido</string>
    <string name="temperature">Temperatura</string>
    <string name="store">Marca</string>
    <string name="combine">Combinar</string>
    <string name="garment">Prenda</string>
    <string name="outfit_name">Outfit</string>
    <string name="cont">Siguiente</string>
    <string name="male">Masculino</string>
    <string name="female">Femenino</string>
    <string name="other">Otro</string>
    <string name="notAnswer">No responder</string>
    <string name="newUSer">Nuevo usuario</string>
    <string name="forgetPass">¿Has olvidado la contraseña?</string>
    <string name="zipCode">Codigo Postal</string>
    <string name="image_garment_description">Imagen de la prenda</string>
    <string name="select_temperature">Selecciona temperatura</string>
    <string name="select_type">Selecciona tipo</string>
    <string name="sweater">Sueter</string>
    <string name="shirt">Camisa</string>
    <string name="tshirt">Camiseta</string>
    <string name="pants">Pantalones</string>
    <string name="jeans">Vaqueros</string>
    <string name="skirt">Falda</string>
    <string name="coat">Abrigo</string>
    <string name="hat">Gorro</string>
    <string name="shoes">Zapatos</string>
    <string name="sports">Deportivas</string>
    <string name="tracksuit">Chandal</string>
    <string name="swimsuit">Bañador</string>
    <string name="dress">Vestido</string>
    <string name="choose_app">Escoge app</string>
    <string name="under0">Por debajo de 0ºC</string>
    <string name="under5">Entre 0 y 5ºC</string>
    <string name="under10">Entre 5 y 10ºC</string>
    <string name="under15">Entre 10 y 15ºC</string>
    <string name="under20">Entre 15 y 20ºC</string>
    <string name="under25">Entre 20 y 25ºC</string>
    <string name="under30">Entre 25 y 30ºC</string>
    <string name="above30">Por encima de 30ºC</string>
    <string name="message_read_storage"> Necesitamos acceder al almacenamiento del dispositivo para poder subir
    la foto de tu prenda.</string>
    <string name="message_camera"> Necesitamos acceder a la camara del dispositivo para poder capturar
    la foto de tu prenda.</string>
    <string name="store_dialog_title">Permiso acceso almacenamiento</string>
    <string name="camera_dialog_title">Permiso acceso camara</string>
    <string name="message_write_storage"> Necesitamos acceder al almacenamiento del dispositivo para poder guardar
    la foto de tu prenda.</string>
    <string name="toWash">A lavar</string>
    <string name="toWardrobe">Al armario</string>
    <string name="delete">Eliminar</string>
    <string name="select_action">Selecciona acción:</string>
    <string name="delete_garment">¿Desea eliminar la prenda?</string>
    <string name="accept_delete">Sí, eliminala</string>
    <string name="cancel">Cancelar</string>
    <string name="wash_message">¿Desea echar a la lavadora la prenda?</string>
    <string name="accept_wash">Sí, a lavar</string>
    <string name="wardrobe_message">¿Desea devolver la prenda al armario?</string>
    <string name="accept_wardrobe">Si, al armario</string>
</resources>

