<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jmpcdev.wardrobe.LoginActivity"
    android:background="@drawable/background_main">

    <ImageView
        android:id="@+id/imvGarmentHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/icono_wardrobe" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edtNameGarment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/garment_name"
            app:layout_constraintBottom_toTopOf="@id/edtType"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="32dp" />

        <EditText
            android:id="@+id/edtType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/garment_type"
            app:layout_constraintBottom_toTopOf="@id/edtDesc"
            app:layout_constraintTop_toBottomOf="@id/edtNameGarment"
            tools:layout_editor_absoluteX="32dp" />

        <EditText
            android:id="@+id/edtDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/description"
            app:layout_constraintBottom_toTopOf="@id/edtColor"
            app:layout_constraintTop_toBottomOf="@id/edtType"
            tools:layout_editor_absoluteX="32dp" />

        <EditText
            android:id="@+id/edtColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/color"
            app:layout_constraintBottom_toTopOf="@id/edtTissue"
            app:layout_constraintTop_toBottomOf="@id/edtDesc"
            tools:layout_editor_absoluteX="32dp" />

        <EditText
            android:id="@+id/edtTissue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/tissue"
            app:layout_constraintBottom_toTopOf="@id/edtTemperature"
            app:layout_constraintTop_toBottomOf="@id/edtColor"
            tools:layout_editor_absoluteX="32dp" />

        <EditText
            android:id="@+id/edtTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/temperature"
            app:layout_constraintBottom_toTopOf="@id/edtStore"
            app:layout_constraintTop_toBottomOf="@id/edtTissue"
            tools:layout_editor_absoluteX="32dp" />

        <EditText
            android:id="@+id/edtStore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/store"
            app:layout_constraintBottom_toTopOf="@id/edtCombine"
            app:layout_constraintTop_toBottomOf="@id/edtTemperature"
            tools:layout_editor_absoluteX="32dp" />

        <EditText
            android:id="@+id/edtCombine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/combine"
            app:layout_constraintBottom_toTopOf="@id/btnGarment"
            app:layout_constraintTop_toBottomOf="@id/edtStore"
            tools:layout_editor_absoluteX="32dp" />

        <Button
            android:id="@+id/btnGarment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cont"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtCombine"
            tools:layout_editor_absoluteX="32dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>